styles.css
/* -- Style --  */


/* --- Layout ---  */
.container {
    max-width: 1000px;
}

body {
    font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
    /* box-sizing: border-box;  Already default in Bootstrap */
    padding: 0;
    margin-top: 50px;
    /* position: relative; */
    background-color: #C5C1C0;
    color: #575757;
    /* Added the below in redesign */
    height: 100%;
    width: 100%;
}


h1, h2, h3, h4, h5, h6 {
    font-family: 'Josefin Sans', sans-serif;
    /* letter-spacing: .1em; */
}


.page-header {
    padding: 0;
}


header#intro {
    position: relative;
    width: 100%;
    min-height: calc(100vh - 50px);
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    background-position: center;
    background-image: url('/images/header.jpg');
    text-align: center;
    color: white;
    
} 

header .header-content {
    position: relative;
    text-align: center;
    padding: 13em 15px 13em;
    width: 100%;
  }

/* header .header-content {
    position: relative;
    height: 100%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    padding: 0 50px;
  }

header .header-content-inner {
    padding-top: 250px;
} */

/* header .header-content {
    position: absolute;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    padding: 0 50px;
  } */

header .header-content-inner hr {
    margin: .7em auto;
    width: 50%;
}

header .header-content .header-content-inner h1 {
    font-weight: 100;
    /* text-transform: uppercase; */
    margin-top: 0;
    margin-bottom: 0;
    font-size: 3em;
}

header .header-content .header-content-inner p {
    /* font-weight: 300; */
    color: rgba(255, 255, 255, 0.7);
    font-size: 2.5em;
    margin-bottom: 50px;
    padding-bottom: 50px;
}

/* .jumbo-style {
    margin-top: -30px;
    padding-left: 1.4em;
    padding-right: 1.4em;   
    padding-bottom: 17px;
    background-color: #1A2930;
    color: #E3E3E3;
    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
    width:  
} */

.navbar-header {
    margin-bottom: 0;
    border-radius: 0;
}

.navbar-brand {
    font-size: 1.6em;
}

.navbar-nav {
    font-size: 1.1em;
}

.navbar-inverse .navbar-nav>.active> a,
.navbar-inverse .navbar-nav>.active> a:focus,
.navbar-inverse .navbar-nav>.active> a:hover {
  background: #868686;
  transition: all ease 0.8s;
}

#bio {
    margin: 2em auto;
    padding-bottom: 4em;
    font-size: 1.2em;
}

.footer-grid {
    display: grid;
    width: 100%;
    grid-template-columns: 1fr 10%;
    grid-template-rows: 1fr;
    justify-items: center;
    justify-content: space-between;
    grid-template-areas:
    "footer-left . . footer-right"
}

#footer-left {
    grid-area: footer-left;
    justify-self: start;
}

#footer-right {
    grid-area: footer-right;
    justify-self: end;
}


footer {
    background-color: #0A1612;
    color: #868686;
    padding-left: .75em;
    padding-right: .75em;
    width: 100%;
}

footer p {
    color:#868686;
    padding-top: .6em;
    margin-top: .3em;
    padding-bottom: .1em;
}  

.fa {
    font-size: 2em;
    width: .9em;
    text-align: center;
    text-decoration: none;
    margin: .3em .1em;
    color: #868686;
}
  
.fa-envelope {
    margin: .25em;
}

.fa-twitter {
    margin-right: .1em;
}
  
.fa:hover {
    color: #f7b733;
    transition: all ease 0.3s;
}


.contacts {
    font-size: 1.2em;
}

.contacts img {
    margin-right: 10px;
}

.img-shadow {
    box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.2);
}

/* #h1 {
    max-width: 1000px;
    width: 90%;
    font-size: 1.1em;
    padding: 50px 10px;
} */

.invisible {
    visibility: hidden;
}

@media screen and (max-width: 441px){
    .footer-grid {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 1fr;
        grid-template-areas:
        "footer-right"
        "footer-left"
    }

    #footer-left {
        grid-area: footer-left;
        justify-self: center;
    }
    
    #footer-right {
        grid-area: footer-right;
        justify-self: center;
    }
}

    #bio {
        margin: 2.1em auto 1em;
        padding-top: 3em;
        padding-bottom: 0;

    }

